Add test coverage + rafactor some part of AbstractGsonRepository